knowledge_base/knowledge/v15/capl/structured/VTSystem/vtsSetLoadControlTimeout.md
# vtsSetLoadControlTimeout

> Category: `VTSystem` | Type: `function`

## Syntax

```c
long vtsSetLoadControlTimeout (char Target[], double Timeout);
```

## Description

When signals with brief interruptions are created (especially PWM signals), it is possible to set a hold time (a control timeout) so that the electronic load does not have be corrected again on every signal edge. Thus, if the input voltage rises again before the timeout expires, the electronic load is still adjusted to the old value and only has to be corrected minimally, if at all. Because the settling time is eliminated, very rapidly changing PWM signals can also be operated with the electronic load.

The timeout time selected should be approximately 10 to 100 times higher than the frequency of the control unit output signal. For a PWM signal with a frequency starting from 10 Hz, a timeout time of 1 to 10 seconds is sufficient. If this functionality is not required, the timeout time should be set to 0, because it slows down the corrections.

## Parameters

| Name | Description |
|---|---|
| Target | Name of the system variable/namespace that will be affected by this function call. |
| Timeout | Defines the timeout time for the internal load in seconds. Permissible range of values: 1...255 s, resolution 1 s, 0: no timeout (default). If an invalid value is specified, the command will fail. |

## Example

The following figure illustrates the control response using an example:

A timeout of 2 s was set here. The input voltage (yellow) and the current flowing at the input (red) are presented qualitatively. At the first pulse, the input voltage is not applied for only approximately 1 s. In this case, a timeout does not occur and the set current continues flowing when the input voltage is applied again. At the second pulse, a timeout occurs. In this case, the input voltage is not applied for a period lasting more than 2 s. The internal load is then connected with high resistance. If the input voltage is restored, the internal load must first adjust to the set current, which is apparent from the slow rise in the current.

```c
vtsSetLoadControlTimeout (sysvar::VTS::LowBeamRight, 10.0);
```

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | — | 7.5 SP2 | 13.0 | — | — | 1.0 |
| Restricted To | — | — | VT offline | — | — | — |
| CANalyzer Measurement Setup (Transmit Branch) | — | N/A | N/A | N/A | N/A | N/A |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | N/A |
| CANoe Simulation Setup | N/A | — | — | — | N/A | N/A |
| CANoe System and Communication Setup | N/A | — | — | — | — | N/A |
| CANoe Test Setup for Test Modules | N/A | ✔ | ✔ | — | N/A | N/A |
| CANoe Test Setup for Test Units | N/A | ✔ | ✔ | — | — | N/A |
| 32-Bit | — | ✔ | ✔ | N/A | — | N/A |
| 64-Bit | — | ✔ | ✔ | — | — | N/A |
